Golden-Kubestronaut-Portfolio/02-certifications/03-kcsa/lab-starter/manifests/security-baseline/00-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kcsa-dev
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
---
apiVersion: v1
kind: Namespace
metadata:
  name: kcsa-ops
  labels:
    access: ops
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
---
apiVersion: v1
kind: Namespace
metadata:
  name: kcsa-shared
